inheritance and universal

--- a/03css/index.html
+++ b/03css/index.html
@@ -19,6 +19,7 @@
       <h1>🥑 The Code Magazine</h1>
 
       <nav>
+        <!-- <p>This is navigation</p> -->
         <a href="blog.html">Blog</a>
         <a href="#">Challenges</a>
         <a href="#">Flexbox</a>
