--- a/03css/index.html
+++ b/03css/index.html
@@ -33,13 +33,14 @@
           <h2>The Basic Language of the Web: HTML</h2>
 
           <img
+            class="author-img"
             src="img/laura-jones.jpg"
             alt="Headshot of Laura Jones"
             width="50"
             height="50"
           />
 
-          <p id="author">
+          <p id="author" class="author">
             Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027
           </p>
 
