--- a/03css/flexbox.html
+++ b/03css/flexbox.html
@@ -43,15 +43,26 @@
         display: flex;
         align-items: center;
         justify-content: flex-start;
-        gap: 30px;
+        gap: 10px;
       }
 
       .el {
         /* margin-right: 30px; */
+        /* DEFAULT:
+        flex-grow: 0;
+        flex-shrink: 1;
+        flex-basis: auto; */
+
+        /* flex-basis: 200px; */
+        /* flex-shrink: 0; */
+        /* flex-grow: 1; */
+
+        flex: 0 0 200px;
       }
 
       .el--1 {
         align-self: flex-start;
+        /* flex-grow: 2; */
       }
 
       .el--5 {
