--- a/03css/css-grid.html
+++ b/03css/css-grid.html
@@ -34,6 +34,7 @@
 
       .container--1 {
         /* STARTER */
+
         font-family: sans-serif;
         background-color: #ddd;
         font-size: 30px;
@@ -51,6 +52,9 @@
         /* gap: 30px; */
         column-gap: 20px;
         row-gap: 40px;
+
+        /* Temporary */
+        display: none;
       }
 
       .el--8 {
@@ -62,7 +66,6 @@
       .el--2 {
         /* grid-column: 1 / 2; */
         /* grid-column: 1 / span 1; */
-        grid-column: 1 / -1;
 
         grid-row: 2 / 3;
       }
@@ -72,8 +75,6 @@
       }
 
       .container--2 {
-        display: none;
-
         /* STARTER */
         font-family: sans-serif;
         background-color: black;
@@ -84,6 +85,23 @@
         height: 600px;
 
         /* CSS GRID */
+        display: grid;
+        grid-template-columns: 125px 200px 125px;
+        grid-template-rows: 250px 100px;
+        gap: 50px;
+
+        /* ALigning tracks inside container: distribute space*/
+        justify-content: center;
+        /* justify-content: space-between; */
+        align-content: center;
+
+        /* aligning items inside cells: moving items arou  nd inside cells */
+        align-items: center;
+        justify-items: center;
+      }
+      .el--3 {
+        align-self: end;
+        justify-self: end;
       }
     </style>
   </head>
